--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.25.0",
     "element-plus": "^2.0.1",
+    "js-cookie": "^3.0.1",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "^17.0.17",
     "@vitejs/plugin-vue": "^2.2.0",
     "less": "^4.1.2",
