--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "dayjs": "^1.10.7",
+    "echarts": "^5.3.0",
     "element-plus": "^2.0.1",
     "js-cookie": "^3.0.1",
     "mitt": "^3.0.0",
