--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,9 @@
     "moduleResolution": "node",
     "strict": true,
     "jsx": "preserve",
-    "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "lib": ["esnext", "dom"],
     "types": ["element-plus/global"],
     "baseUrl": "./",
